--- a/ansible/roles/homebrew/tasks/main.yaml
+++ b/ansible/roles/homebrew/tasks/main.yaml
@@ -25,6 +25,7 @@
   environment:
     PATH: /opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin
     NONINTERACTIVE: "1"
+    HOMEBREW_SUDO_ASKPASS: "1"
     SUDO_ASKPASS: "{{ brew_sudo_askpass | default(omit) }}"
   register: brew_bundle
   changed_when: "'Installing' in (brew_bundle.stdout + brew_bundle.stderr)"
@@ -38,6 +39,7 @@
   environment:
     PATH: /opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin
     NONINTERACTIVE: "1"
+    HOMEBREW_SUDO_ASKPASS: "1"
     SUDO_ASKPASS: "{{ brew_sudo_askpass | default(omit) }}"
   register: brew_dump
   changed_when: "'Writing' in (brew_dump.stdout + brew_dump.stderr)"
