--- a/ansible/roles/macos/tasks/main.yaml
+++ b/ansible/roles/macos/tasks/main.yaml
@@ -1,10 +1,10 @@
 - name: Determine macOS sudo password source
   ansible.builtin.set_fact:
-    macos_password: "{{ macos_sudo_password | default(homebrew_sudo_password, true) | default(ansible_become_password, true) | default('', true) }}"
+    macos_password: "{{ sudo_pass | default(ansible_become_password, true) | default('', true) }}"
 
 - name: Require sudo password for system preferences/NVRAM
   ansible.builtin.fail:
-    msg: "macOS defaults (system) と NVRAM には sudo が必要です。--ask-become-pass か EXTRA_VARS=\"macos_sudo_password=...\"（homebrew_sudo_password でも可）を渡してください。"
+    msg: "macOS defaults (system) と NVRAM には sudo が必要です。--ask-become-pass か EXTRA_VARS=\"sudo_pass=...\" を渡してください。"
   when:
     - (defaults_settings | selectattr('become', 'equalto', true) | list | length) > 0 or (nvram_settings | length) > 0
     - macos_password | length == 0
