--- a/ansible/roles/macos/vars/main.yaml
+++ b/ansible/roles/macos/vars/main.yaml
@@ -6,7 +6,7 @@ defaults_settings:
   - { domain: /Library/Preferences/com.apple.iokit.AmbientLightSensor, key: AutomaticKeyboardEnabled, type: bool, value: false, become: true }
   - { domain: /Library/Preferences/com.apple.iokit.AmbientLightSensor, key: KeyboardBacklightLevel, type: float, value: 0.0, become: true }
   # Trackpad
-  - { domain: NSGlobalDomain, key: com.apple.trackpad.scaling, type: float, value: 3.0 }
+  - { domain: NSGlobalDomain, key: com.apple.trackpad.scaling, type: int, value: 3 }
   # Dock
   - { domain: com.apple.dock, key: tilesize, type: int, value: 40 }
   - { domain: com.apple.dock, key: orientation, type: string, value: left }
