--- a/ansible/roles/dotfiles/tasks/main.yaml
+++ b/ansible/roles/dotfiles/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Run link-symbolic-dotfiles.sh non-interactively (creates symlinks + Brewfile dump)
   ansible.builtin.shell: |
-    cd /Users/s11639/dev/me/macsetup
+    cd ~/dev/me/macsetup
     printf 'y\n' | ./scripts/link-symbolic-dotfiles.sh
   environment:
     PATH: /opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin
