--- a/ansible/roles/macos/tasks/main.yaml
+++ b/ansible/roles/macos/tasks/main.yaml
@@ -60,3 +60,9 @@
   when:
     - nvram_settings | length > 0
     - (item.key ~ '\t' ~ item.value) not in nvram_dump.stdout
+
+- name: Ensure login shell is zsh
+  become: true
+  ansible.builtin.user:
+    name: "{{ lookup('env', 'USER') }}"
+    shell: /bin/zsh
