--- a/ansible/roles/macos/tasks/main.yaml
+++ b/ansible/roles/macos/tasks/main.yaml
@@ -61,8 +61,13 @@
     - nvram_settings | length > 0
     - (item.key ~ '\t' ~ item.value) not in nvram_dump.stdout
 
+- name: Check for Homebrew zsh
+  ansible.builtin.stat:
+    path: /opt/homebrew/bin/zsh
+  register: brew_zsh
+
 - name: Ensure login shell is zsh
   become: true
   ansible.builtin.user:
     name: "{{ lookup('env', 'USER') }}"
-    shell: /bin/zsh
+    shell: "{{ brew_zsh.stat.exists | ternary('/opt/homebrew/bin/zsh', '/bin/zsh') }}"
