--- a/ansible/roles/macos/tasks/main.yaml
+++ b/ansible/roles/macos/tasks/main.yaml
@@ -22,6 +22,13 @@
     ansible_become_password: "{{ macos_password }}"
   when: macos_password | length > 0
 
+- name: Ensure screenshot directory exists
+  ansible.builtin.file:
+    path: "{{ screen_capture_location }}"
+    state: directory
+    mode: "0755"
+  when: screen_capture_location is defined
+
 - name: Apply macOS defaults
   become: "{{ item.become | default(false) }}"
   community.general.osx_defaults:
